@@ -2,68 +2,71 @@ package kpi.fict.coursework.op.zaranik.services.dao.impl;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
-import kpi.fict.coursework.op.zaranik.dao.impl.QueueDao;
+import kpi.fict.coursework.op.zaranik.dao.impl.QueueDaoImpl;
 import kpi.fict.coursework.op.zaranik.model.Queue;
 import kpi.fict.coursework.op.zaranik.model.User;
 import kpi.fict.coursework.op.zaranik.services.dao.QueueDaoService;
+import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 
+@RequiredArgsConstructor
 public class QueueDaoServiceImpl implements QueueDaoService {
 
-  private final QueueDao queueDao;
-
-  public QueueDaoServiceImpl(QueueDao queueDao) {
-    this.queueDao = queueDao;
-  }
+  private final QueueDaoImpl queueDaoImpl;
 
   @Override
   public Queue findQueueByName(String name) {
-    return queueDao.findAll().stream()
+    return queueDaoImpl.findAll().stream()
         .filter(queue -> queue.getName().equals(name))
-        .findFirst().orElse(null);
+        .findFirst()
+        .orElse(null);
   }
 
   @Override
   public void addQueueToUser(User user, Queue queue) {
     if (user != null && queue != null) {
       queue.setCreator(user);
-      queueDao.insert(queue);
+      queueDaoImpl.insert(queue);
     }
   }
 
   @Override
   public Collection<Queue> getUserQueues(String username) {
-    return queueDao.findAll().stream()
+    return queueDaoImpl.findAll().stream()
         .filter(queue -> queue.getCreator().getUsername().equals(username))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public Collection<Queue> getAllQueues() {
-    return queueDao.findAll();
+    return queueDaoImpl.findAll();
   }
 
   @Override
   @SneakyThrows
   public int getUserPosition(Queue queue, User user) {
-    Queue selectedQueue = queueDao.findAll().stream()
+    Queue selectedQueue = queueDaoImpl.findAll().stream()
         .filter(q -> q.getName().equals(queue.getName()))
-        .findFirst().orElse(null);
-    if (selectedQueue == null) return -1;
-    List<String> items = queueDao.getItemsByQueueId(selectedQueue.getId());
-    if (!items.contains(user.getUsername())) return -1;
+        .findFirst()
+        .orElse(null);
+    if (selectedQueue == null) {
+      return -1;
+    }
+    List<String> items = queueDaoImpl.getItemsByQueueId(selectedQueue.getId());
+    if (!items.contains(user.getUsername())) {
+      return -1;
+    }
     return items.indexOf(user.getUsername()) + 1;
   }
 
   @Override
   public void updateQueue(Queue queue) {
-    queueDao.update(queue);
+    queueDaoImpl.update(queue);
   }
 
   @Override
   public void deleteQueue(Queue queue) {
-    queueDao.delete(queue);
+    queueDaoImpl.delete(queue);
   }
 
   @Override
@@ -74,40 +77,40 @@ public class QueueDaoServiceImpl implements QueueDaoService {
   @Override
   @SneakyThrows
   public void removeFirstItemFromQueue(Queue queue) {
-    List<String> items = queueDao.getItemsByQueueId(queue.getId());
+    List<String> items = queueDaoImpl.getItemsByQueueId(queue.getId());
     if (!items.isEmpty()) {
       String firstItem = items.get(0);
-      queueDao.removeItemFromQueue(queue.getId(), firstItem);
+      queueDaoImpl.removeItemFromQueue(queue.getId(), firstItem);
     }
   }
 
   @Override
   public List<String> getItemsByQueueId(int queueId) {
-    return queueDao.getItemsByQueueId(queueId);
+    return queueDaoImpl.getItemsByQueueId(queueId);
   }
 
   @Override
   public void addItemInQueue(Queue queue, String item) {
     int queueId = queue.getId();
-    queueDao.addItemByQueueId(queueId, item);
+    queueDaoImpl.addItemByQueueId(queueId, item);
   }
 
   @Override
   public void removeItemFromQueue(Queue queue, String item) {
     int queueId = queue.getId();
-    queueDao.removeItemFromQueue(queueId, item);
+    queueDaoImpl.removeItemFromQueue(queueId, item);
   }
 
   @Override
   @SneakyThrows
   public int getQueueSize(Queue queue) {
-    return queueDao.getItemsByQueueId(queue.getId()).size();
+    return queueDaoImpl.getItemsByQueueId(queue.getId()).size();
   }
 
   @Override
   @SneakyThrows
   public boolean contains(Queue queue, String item) {
-    List<String> items = queueDao.getItemsByQueueId(queue.getId());
+    List<String> items = queueDaoImpl.getItemsByQueueId(queue.getId());
     return items.contains(item);
   }
 
@@ -121,8 +124,8 @@ public class QueueDaoServiceImpl implements QueueDaoService {
   public void setBlock(String queueName, boolean isBlocked) {
     Queue queue = findQueueByName(queueName);
     if (queue != null) {
-      queue.setBlock(isBlocked);
-      queueDao.update(queue);
+      queue.setIsBlocked(isBlocked);
+      queueDaoImpl.update(queue);
     }
   }
 }
